lib/src/ffi/tanglex_bindings.dart

// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Dart FFI bindings for TangleX C API.
class TanglexBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  TanglexBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  TanglexBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void hs_init(int argc, ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>> argv) {
    return _hs_init(argc, argv);
  }

  late final _hs_initPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
          )
        >
      >('hs_init');
  late final _hs_init = _hs_initPtr
      .asFunction<
        void Function(int, ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>)
      >();

  ffi.Pointer<ffi.Char> chat_migrate_init_key(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> key,
    int keepKey,
    ffi.Pointer<ffi.Char> confirm,
    int backgroundMode,
    ffi.Pointer<chat_ctrl> ctrl,
  ) {
    return _chat_migrate_init_key(
      path,
      key,
      keepKey,
      confirm,
      backgroundMode,
      ctrl,
    );
  }

  late final _chat_migrate_init_keyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<chat_ctrl>,
          )
        >
      >('chat_migrate_init_key');
  late final _chat_migrate_init_key = _chat_migrate_init_keyPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<chat_ctrl>,
        )
      >();

  ffi.Pointer<ffi.Char> chat_close_store(chat_ctrl ctl) {
    return _chat_close_store(ctl);
  }

  late final _chat_close_storePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(chat_ctrl)>>(
        'chat_close_store',
      );
  late final _chat_close_store = _chat_close_storePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(chat_ctrl)>();

  ffi.Pointer<ffi.Char> chat_reopen_store(chat_ctrl ctl) {
    return _chat_reopen_store(ctl);
  }

  late final _chat_reopen_storePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(chat_ctrl)>>(
        'chat_reopen_store',
      );
  late final _chat_reopen_store = _chat_reopen_storePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(chat_ctrl)>();

  ffi.Pointer<ffi.Char> chat_send_cmd_retry(
    chat_ctrl ctl,
    ffi.Pointer<ffi.Char> cmd,
    int retryNum,
  ) {
    return _chat_send_cmd_retry(ctl, cmd, retryNum);
  }

  late final _chat_send_cmd_retryPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            chat_ctrl,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('chat_send_cmd_retry');
  late final _chat_send_cmd_retry = _chat_send_cmd_retryPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(chat_ctrl, ffi.Pointer<ffi.Char>, int)
      >();

  ffi.Pointer<ffi.Char> chat_recv_msg_wait(chat_ctrl ctl, int wait) {
    return _chat_recv_msg_wait(ctl, wait);
  }

  late final _chat_recv_msg_waitPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(chat_ctrl, ffi.Int)>
      >('chat_recv_msg_wait');
  late final _chat_recv_msg_wait = _chat_recv_msg_waitPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(chat_ctrl, int)>();

  ffi.Pointer<ffi.Char> chat_parse_markdown(ffi.Pointer<ffi.Char> str) {
    return _chat_parse_markdown(str);
  }

  late final _chat_parse_markdownPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('chat_parse_markdown');
  late final _chat_parse_markdown = _chat_parse_markdownPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> chat_parse_server(ffi.Pointer<ffi.Char> str) {
    return _chat_parse_server(str);
  }

  late final _chat_parse_serverPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('chat_parse_server');
  late final _chat_parse_server = _chat_parse_serverPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> chat_parse_uri(ffi.Pointer<ffi.Char> str, int safe) {
    return _chat_parse_uri(str, safe);
  }

  late final _chat_parse_uriPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, ffi.Int)
        >
      >('chat_parse_uri');
  late final _chat_parse_uri = _chat_parse_uriPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.Char> chat_password_hash(
    ffi.Pointer<ffi.Char> pwd,
    ffi.Pointer<ffi.Char> salt,
  ) {
    return _chat_password_hash(pwd, salt);
  }

  late final _chat_password_hashPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('chat_password_hash');
  late final _chat_password_hash = _chat_password_hashPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> chat_valid_name(ffi.Pointer<ffi.Char> name) {
    return _chat_valid_name(name);
  }

  late final _chat_valid_namePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('chat_valid_name');
  late final _chat_valid_name = _chat_valid_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  int chat_json_length(ffi.Pointer<ffi.Char> str) {
    return _chat_json_length(str);
  }

  late final _chat_json_lengthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'chat_json_length',
      );
  late final _chat_json_length = _chat_json_lengthPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> chat_encrypt_media(
    chat_ctrl ctl,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> frame,
    int len,
  ) {
    return _chat_encrypt_media(ctl, key, frame, len);
  }

  late final _chat_encrypt_mediaPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            chat_ctrl,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('chat_encrypt_media');
  late final _chat_encrypt_media = _chat_encrypt_mediaPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          chat_ctrl,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  ffi.Pointer<ffi.Char> chat_decrypt_media(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> frame,
    int len,
  ) {
    return _chat_decrypt_media(key, frame, len);
  }

  late final _chat_decrypt_mediaPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('chat_decrypt_media');
  late final _chat_decrypt_media = _chat_decrypt_mediaPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  ffi.Pointer<ffi.Char> chat_write_file(
    chat_ctrl ctl,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> data,
    int len,
  ) {
    return _chat_write_file(ctl, path, data, len);
  }

  late final _chat_write_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            chat_ctrl,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('chat_write_file');
  late final _chat_write_file = _chat_write_filePtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          chat_ctrl,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  ffi.Pointer<ffi.Char> chat_read_file(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> nonce,
  ) {
    return _chat_read_file(path, key, nonce);
  }

  late final _chat_read_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('chat_read_file');
  late final _chat_read_file = _chat_read_filePtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> chat_encrypt_file(
    chat_ctrl ctl,
    ffi.Pointer<ffi.Char> fromPath,
    ffi.Pointer<ffi.Char> toPath,
  ) {
    return _chat_encrypt_file(ctl, fromPath, toPath);
  }

  late final _chat_encrypt_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            chat_ctrl,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('chat_encrypt_file');
  late final _chat_encrypt_file = _chat_encrypt_filePtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          chat_ctrl,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> chat_decrypt_file(
    ffi.Pointer<ffi.Char> fromPath,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> nonce,
    ffi.Pointer<ffi.Char> toPath,
  ) {
    return _chat_decrypt_file(fromPath, key, nonce, toPath);
  }

  late final _chat_decrypt_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('chat_decrypt_file');
  late final _chat_decrypt_file = _chat_decrypt_filePtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();
}

typedef chat_ctrl = ffi.Pointer<ffi.Void>;
